--- a/Step 4 - Collect Results.ipynb
+++ b/Step 4 - Collect Results.ipynb
@@ -781,7 +781,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -795,7 +795,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ebd00b03cff92ff14b080d324346753be5b58966884166b7a4b38b411af5e07c"
+   }
   }
  },
  "nbformat": 4,
